--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "functions:dev": "edgeone pages dev --fePort 3000"
   },
   "dependencies": {
+    "@paddle/paddle-js": "^1.4.1",
+    "@paddle/paddle-node-sdk": "^2.7.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
